# taskswarm

./: .gitignore  .prettierignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  eslint.config.js  package-lock.json  package.json  tsconfig.json  vitest.config.ts
.github/: CODEOWNERS
.github/workflows/: ci.yml
docs/: concepts.md  getting-started.md
docs/integrations/: ci.md
python/: README.md  pyproject.toml
python/examples/: README.md
python/examples/01-basic-server/: run.py
python/examples/02-ci-gate/: gate.py
python/examples/03-claude-code-hook/: relay.py
python/src/taskswarm/: __init__.py  cli.py
python/src/taskswarm/adapters/: __init__.py  claude_code_adapter.py  generic_adapter.py  types.py
python/src/taskswarm/client/: api_client.py  tasks_registry.py
python/src/taskswarm/notifications/: __init__.py  dispatch.py  ntfy.py  os_notify.py
python/src/taskswarm/schema/: __init__.py  events.py
python/src/taskswarm/server/: __init__.py  auth.py  config.py  event_store.py  http_server.py  server.py
python/src/taskswarm/ui/: index.html
python/src/taskswarm/util/: sync_sleep.py
python/tests/: conftest.py  test_adapters.py  test_api_client.py  test_auth.py  test_cli.py  test_config.py  test_event_store.py  test_events_schema.py  test_notify.py  test_ntfy.py  test_os_notify.py  test_server_lifecycle.py  test_tasks_registry.py
scripts/: copy-assets.mjs
src/: cli.ts  index.ts
src/adapters/: claude-code-adapter.ts  generic-adapter.ts  types.ts
src/cli/: api-client.ts  tasks-registry.ts
src/notify/: index.ts  ntfy.ts  os-notify.ts
src/schema/: events.ts
src/server/: auth.ts  config.ts  event-store.ts  http-server.ts  index.ts
src/util/: sync-sleep.ts
test/: adapters.test.ts  api.test.ts  cli-smoke.test.ts  cli.test.ts  config.test.ts  event-store.test.ts  events-schema.test.ts  notify-channels.test.ts  notify.test.ts  ntfy.test.ts  sync-sleep.test.ts  tasks-registry.test.ts
test/fixtures/: add-task-worker.ts  print-config-token.ts
