[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "taskswarm-cli"
version = "0.1.0"
description = "Self-hosted event server that pushes a notification the instant a parallel coding-agent session blocks, needs review, fails, or finishes."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "Rudrendu Paul" },
  { name = "Sourav Nandy" },
]
keywords = ["coding-agent", "multi-agent", "claude-code", "orchestration", "cli", "notifications", "self-hosted", "event-server", "dashboard"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Build Tools",
  "Topic :: System :: Monitoring",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=7.0,<9",
  "build>=1.0,<2",
  "twine>=5.0,<7",
]

[project.urls]
Homepage = "https://github.com/RudrenduPaul/taskswarm"
Repository = "https://github.com/RudrenduPaul/taskswarm"
"Bug Tracker" = "https://github.com/RudrenduPaul/taskswarm/issues"
Changelog = "https://github.com/RudrenduPaul/taskswarm/blob/main/CHANGELOG.md"
Documentation = "https://github.com/RudrenduPaul/taskswarm/blob/main/docs/getting-started.md"
"Author - Rudrendu Paul" = "https://github.com/RudrenduPaul"
"Author - Sourav Nandy" = "https://github.com/Sourav-nandy-ai"

[project.scripts]
taskswarm = "taskswarm.cli:main"
taskswarm-cli = "taskswarm.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/taskswarm"]

[tool.hatch.build.targets.sdist]
include = [
  "src/taskswarm",
  "tests",
  "examples",
  "README.md",
  "LICENSE",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
